--- a/2_data_science_basics.ipynb
+++ b/2_data_science_basics.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "ox6BA2ofV_3p"
@@ -13,7 +12,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "7gNBBBNDV_3w"
@@ -32,7 +30,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "msQ8IFvWV_3x"
@@ -42,7 +39,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "-hLwyxsUV_3x"
@@ -54,7 +50,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "nTR20eiSV_3y"
@@ -83,7 +78,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "SI0DKpp3V_3z"
@@ -126,7 +120,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "O_VHaBeJV_30"
@@ -153,7 +146,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "6XjKV55tV_31"
@@ -197,7 +189,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "QMUK2TQiV_32"
@@ -228,7 +219,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "ETf0JhXDV_32"
@@ -329,7 +319,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "JIYL_rpIV_33"
@@ -361,7 +350,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "Ab0-qKj0V_33"
@@ -387,7 +375,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "InRQ69SmV_34"
@@ -429,7 +416,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "M-W9EAIqV_34"
@@ -465,7 +451,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "QUzqWROJV_35"
@@ -527,7 +512,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "ymyvkdS6V_36"
@@ -640,7 +624,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "4U61EDtTV_36"
@@ -863,7 +846,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "Swl_9wtdV_37"
@@ -964,7 +946,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "HqcwcbD1V_38"
@@ -1019,7 +1000,6 @@
    "source": []
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "kAC-DH-hV_39"
@@ -1068,7 +1048,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "H3W83prDV_39"
@@ -1091,7 +1070,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "L-fpNQYZV_3-"
@@ -1101,7 +1079,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "T5xSTa1-V_3-"
@@ -1150,7 +1127,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "orVd0jffV_3-"
@@ -1197,7 +1173,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "mmWz1z7AV_3_"
@@ -1255,7 +1230,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "Tm-WOGmxeVZ_"
@@ -1265,7 +1239,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "I3WkLGsOV_3_"
@@ -1343,7 +1316,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "B3dp1tBFV_4A"
@@ -1393,7 +1365,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "OZN7reANV_4A"
@@ -1439,7 +1410,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "6D35-mOsV_4B"
@@ -1462,7 +1432,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "Lh3AfTGYV_4B"
@@ -1530,7 +1499,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "aLkNmyE2V_4C"
@@ -1571,7 +1539,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "MLPpKe0lV_4C"
@@ -1617,7 +1584,7 @@
    "name": "dviz"
   },
   "kernelspec": {
-   "display_name": "Python 3.8.13 ('py-3.8')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1631,7 +1598,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.16"
   },
   "nteract": {
    "version": "0.28.0"
