--- a/4_temporal_spatial_data_analysis.ipynb
+++ b/4_temporal_spatial_data_analysis.ipynb
@@ -58,7 +58,7 @@
     "\n",
     "# Define the months and year you're interested in\n",
     "months = ['01', '02']\n",
-    "year = '2022'\n",
+    "year = ['2021', '2022', '2023']\n",
     "\n",
     "# Create empty lists to store the dataframes\n",
     "df_yellow_list = []\n",
@@ -145,7 +145,7 @@
        "      <td>3.0</td>\n",
        "      <td>0.5</td>\n",
        "      <td>3.65</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0.00</td>\n",
        "      <td>0.3</td>\n",
        "      <td>21.95</td>\n",
        "      <td>2.5</td>\n",
@@ -167,7 +167,7 @@
        "      <td>0.5</td>\n",
        "      <td>0.5</td>\n",
        "      <td>4.00</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0.00</td>\n",
        "      <td>0.3</td>\n",
        "      <td>13.30</td>\n",
        "      <td>0.0</td>\n",
@@ -189,7 +189,7 @@
        "      <td>0.5</td>\n",
        "      <td>0.5</td>\n",
        "      <td>1.76</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0.00</td>\n",
        "      <td>0.3</td>\n",
        "      <td>10.56</td>\n",
        "      <td>0.0</td>\n",
@@ -211,7 +211,7 @@
        "      <td>0.5</td>\n",
        "      <td>0.5</td>\n",
        "      <td>0.00</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0.00</td>\n",
        "      <td>0.3</td>\n",
        "      <td>11.80</td>\n",
        "      <td>2.5</td>\n",
@@ -233,9 +233,119 @@
        "      <td>0.5</td>\n",
        "      <td>0.5</td>\n",
        "      <td>3.00</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0.00</td>\n",
        "      <td>0.3</td>\n",
        "      <td>30.30</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2022-01-01 00:40:15</td>\n",
+       "      <td>2022-01-01 01:09:48</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>10.30</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>N</td>\n",
+       "      <td>138</td>\n",
+       "      <td>161</td>\n",
+       "      <td>1</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>13.00</td>\n",
+       "      <td>6.55</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>56.35</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2022-01-01 00:20:50</td>\n",
+       "      <td>2022-01-01 00:34:58</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>5.07</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>N</td>\n",
+       "      <td>233</td>\n",
+       "      <td>87</td>\n",
+       "      <td>1</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>5.20</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>26.00</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2022-01-01 00:13:04</td>\n",
+       "      <td>2022-01-01 00:22:45</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.02</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>N</td>\n",
+       "      <td>238</td>\n",
+       "      <td>152</td>\n",
+       "      <td>2</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>12.80</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2022-01-01 00:30:02</td>\n",
+       "      <td>2022-01-01 00:44:49</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.71</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>N</td>\n",
+       "      <td>166</td>\n",
+       "      <td>236</td>\n",
+       "      <td>1</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>2.25</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>18.05</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2022-01-01 00:48:52</td>\n",
+       "      <td>2022-01-01 00:53:28</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.78</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>N</td>\n",
+       "      <td>236</td>\n",
+       "      <td>141</td>\n",
+       "      <td>2</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>8.80</td>\n",
        "      <td>2.5</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
@@ -250,6 +360,11 @@
        "2         2  2022-01-01 00:53:21   2022-01-01 01:02:19              1.0   \n",
        "3         2  2022-01-01 00:25:21   2022-01-01 00:35:23              1.0   \n",
        "4         2  2022-01-01 00:36:48   2022-01-01 01:14:20              1.0   \n",
+       "5         1  2022-01-01 00:40:15   2022-01-01 01:09:48              1.0   \n",
+       "6         2  2022-01-01 00:20:50   2022-01-01 00:34:58              1.0   \n",
+       "7         2  2022-01-01 00:13:04   2022-01-01 00:22:45              1.0   \n",
+       "8         2  2022-01-01 00:30:02   2022-01-01 00:44:49              1.0   \n",
+       "9         2  2022-01-01 00:48:52   2022-01-01 00:53:28              1.0   \n",
        "\n",
        "   trip_distance  RatecodeID store_and_fwd_flag  PULocationID  DOLocationID  \\\n",
        "0           3.80         1.0                  N           142           236   \n",
@@ -257,20 +372,35 @@
        "2           0.97         1.0                  N           166           166   \n",
        "3           1.09         1.0                  N           114            68   \n",
        "4           4.30         1.0                  N            68           163   \n",
+       "5          10.30         1.0                  N           138           161   \n",
+       "6           5.07         1.0                  N           233            87   \n",
+       "7           2.02         1.0                  N           238           152   \n",
+       "8           2.71         1.0                  N           166           236   \n",
+       "9           0.78         1.0                  N           236           141   \n",
        "\n",
        "   payment_type  fare_amount  extra  mta_tax  tip_amount  tolls_amount  \\\n",
-       "0             1         14.5    3.0      0.5        3.65           0.0   \n",
-       "1             1          8.0    0.5      0.5        4.00           0.0   \n",
-       "2             1          7.5    0.5      0.5        1.76           0.0   \n",
-       "3             2          8.0    0.5      0.5        0.00           0.0   \n",
-       "4             1         23.5    0.5      0.5        3.00           0.0   \n",
+       "0             1         14.5    3.0      0.5        3.65          0.00   \n",
+       "1             1          8.0    0.5      0.5        4.00          0.00   \n",
+       "2             1          7.5    0.5      0.5        1.76          0.00   \n",
+       "3             2          8.0    0.5      0.5        0.00          0.00   \n",
+       "4             1         23.5    0.5      0.5        3.00          0.00   \n",
+       "5             1         33.0    3.0      0.5       13.00          6.55   \n",
+       "6             1         17.0    0.5      0.5        5.20          0.00   \n",
+       "7             2          9.0    0.5      0.5        0.00          0.00   \n",
+       "8             1         12.0    0.5      0.5        2.25          0.00   \n",
+       "9             2          5.0    0.5      0.5        0.00          0.00   \n",
        "\n",
        "   improvement_surcharge  total_amount  congestion_surcharge  airport_fee  \n",
        "0                    0.3         21.95                   2.5          0.0  \n",
        "1                    0.3         13.30                   0.0          0.0  \n",
        "2                    0.3         10.56                   0.0          0.0  \n",
        "3                    0.3         11.80                   2.5          0.0  \n",
-       "4                    0.3         30.30                   2.5          0.0  "
+       "4                    0.3         30.30                   2.5          0.0  \n",
+       "5                    0.3         56.35                   2.5          0.0  \n",
+       "6                    0.3         26.00                   2.5          0.0  \n",
+       "7                    0.3         12.80                   2.5          0.0  \n",
+       "8                    0.3         18.05                   2.5          0.0  \n",
+       "9                    0.3          8.80                   2.5          0.0  "
       ]
      },
      "execution_count": 3,
@@ -279,12 +409,12 @@
     }
    ],
    "source": [
-    "df_yellow.head(5)"
+    "df_yellow.head(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -347,7 +477,7 @@
        "      <td>0.5</td>\n",
        "      <td>0.00</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>0.3</td>\n",
        "      <td>4.80</td>\n",
        "      <td>2.0</td>\n",
@@ -370,7 +500,7 @@
        "      <td>0.5</td>\n",
        "      <td>0.00</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>0.3</td>\n",
        "      <td>10.80</td>\n",
        "      <td>2.0</td>\n",
@@ -393,7 +523,7 @@
        "      <td>0.5</td>\n",
        "      <td>4.60</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>0.3</td>\n",
        "      <td>23.15</td>\n",
        "      <td>1.0</td>\n",
@@ -416,7 +546,7 @@
        "      <td>0.5</td>\n",
        "      <td>0.00</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>0.3</td>\n",
        "      <td>9.30</td>\n",
        "      <td>2.0</td>\n",
@@ -439,7 +569,7 @@
        "      <td>0.5</td>\n",
        "      <td>5.21</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>0.3</td>\n",
        "      <td>31.26</td>\n",
        "      <td>1.0</td>\n",
@@ -465,12 +595,12 @@
        "3         1.0           181           181              1.0           1.69   \n",
        "4         1.0            33           170              1.0           6.26   \n",
        "\n",
-       "   fare_amount  extra  mta_tax  tip_amount  tolls_amount ehail_fee  \\\n",
-       "0          3.5   0.50      0.5        0.00           0.0      None   \n",
-       "1          9.5   0.50      0.5        0.00           0.0      None   \n",
-       "2         14.5   3.25      0.5        4.60           0.0      None   \n",
-       "3          8.0   0.50      0.5        0.00           0.0      None   \n",
-       "4         22.0   0.50      0.5        5.21           0.0      None   \n",
+       "   fare_amount  extra  mta_tax  tip_amount  tolls_amount  ehail_fee  \\\n",
+       "0          3.5   0.50      0.5        0.00           0.0        NaN   \n",
+       "1          9.5   0.50      0.5        0.00           0.0        NaN   \n",
+       "2         14.5   3.25      0.5        4.60           0.0        NaN   \n",
+       "3          8.0   0.50      0.5        0.00           0.0        NaN   \n",
+       "4         22.0   0.50      0.5        5.21           0.0        NaN   \n",
        "\n",
        "   improvement_surcharge  total_amount  payment_type  trip_type  \\\n",
        "0                    0.3          4.80           2.0        1.0   \n",
@@ -487,7 +617,7 @@
        "4                  2.75  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -744,7 +874,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.9"
   },
   "orig_nbformat": 4
  },
