Save work with json normalize used

--- a/5_nasa_data_collection_and_visualization.ipynb
+++ b/5_nasa_data_collection_and_visualization.ipynb
@@ -57,8 +57,8 @@
    "source": [
     "# Set the start and end dates for the data you want to fetch\n",
     "start_date = datetime.strptime('2022-01-01', '%Y-%m-%d')\n",
-    "end_date = start_date + timedelta(days=365)  # 1 year later\n",
-    "\n",
+    "end_date = start_date + timedelta(days=21)  # 1 year later\n",
+    "# change above to full year!\n",
     "# Initialize a list to store the data\n",
     "data = []\n",
     "\n",
@@ -69,12 +69,15 @@
     "current_date = start_date\n",
     "while current_date < end_date:\n",
     "    next_date = min(current_date + timedelta(days=7), end_date)\n",
+    "    print(\"Current date: \", current_date)\n",
+    "    print(\"Next date: \", next_date)\n",
     "    response = requests.get(f'https://api.nasa.gov/neo/rest/v1/feed?start_date={current_date.strftime(\"%Y-%m-%d\")}&end_date={next_date.strftime(\"%Y-%m-%d\")}&api_key={api_key}')\n",
     "    data.append(response.json())\n",
     "    current_date = next_date\n",
     "    time.sleep(1)  # To avoid hitting the rate limit\n",
     "\n",
-    "# Now 'data' contains the NEO data for the 1-year period\n"
+    "# Now 'data' contains the NEO data for the 1-year period\n",
+    "print(data)"
    ]
   },
   {
@@ -154,7 +157,94 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Write your code"
+    "# Write your code\n",
+    "import pandas as pd\n",
+    "print(\"DATA TYPE:\", type(data))\n",
+    "print(\"DATA0 TYPE:\", type(data[0])) \n",
+    "# data is a list of dicts containing json response data\n",
+    "# DATA TYPE: <class 'list'>\n",
+    "# DATA0 TYPE: <class 'dict'>\n",
+    "# NEO TYPE: <class 'dict'>\n",
+    "# INDEX TYPE <class 'tuple'>\n",
+    "# temp_df is a pandas dataframe\n",
+    "# write down what data types are needed!\n",
+    "for j in range(3): # for 3 weeks, change to include all\n",
+    "    neo = data[j]['near_earth_objects']\n",
+    "    print(\"NEO TYPE:\", type(neo))\n",
+    "    for i in sorted(neo.items()):\n",
+    "        #print(\"val:\", i[0])\n",
+    "        print(\"INDEX TYPE\", type(i))\n",
+    "        print(\"INDEX0 TYPE\", type(i[0]))\n",
+    "        #print(pd.json_normalize(neo, record_path=i[0]))\n",
+    "        temp_df = pd.json_normalize(neo, record_path=i[0])\n",
+    "        print(\"DF TYPE\", type(temp_df))\n",
+    "        print(temp_df['absolute_magnitude_h'].describe())\n",
+    "\n",
+    "# df = pd.DataFrame(data)\n",
+    "# df.describe()\n",
+    "# below just for reference\n",
+    "temp = {\n",
+    "    'links': {\n",
+    "        'next': 'http://api.nasa.gov/neo/rest/v1/feed?start_date=2022-01-08&end_date=2022-01-15&detailed=false&api_key=DEMO_KEY',\n",
+    "        'previous': 'http://api.nasa.gov/neo/rest/v1/feed?start_date=2021-12-25&end_date=2022-01-01&detailed=false&api_key=DEMO_KEY',\n",
+    "        'self': 'http://api.nasa.gov/neo/rest/v1/feed?start_date=2022-01-01&end_date=2022-01-08&detailed=false&api_key=DEMO_KEY'\n",
+    "    },\n",
+    "    'element_count': 125,\n",
+    "    'near_earth_objects': {\n",
+    "        '2022-01-07': [{\n",
+    "            'links': {\n",
+    "                'self': 'http://api.nasa.gov/neo/rest/v1/neo/2216523?api_key=DEMO_KEY'\n",
+    "            },\n",
+    "            'id': '2216523',\n",
+    "            'neo_reference_id': '2216523',\n",
+    "            'name': '216523 (2001 HY7)',\n",
+    "            'nasa_jpl_url': 'http://ssd.jpl.nasa.gov/sbdb.cgi?sstr=2216523',\n",
+    "            'absolute_magnitude_h': 20.7,\n",
+    "            'estimated_diameter': {\n",
+    "                'kilometers': {\n",
+    "                    'estimated_diameter_min': 0.1925550782,\n",
+    "                    'estimated_diameter_max': 0.4305662442\n",
+    "                },\n",
+    "                'meters': {\n",
+    "                    'estimated_diameter_min': 192.5550781879,\n",
+    "                    'estimated_diameter_max': 430.566244241\n",
+    "                },\n",
+    "                'miles': {\n",
+    "                    'estimated_diameter_min': 0.1196481415,\n",
+    "                    'estimated_diameter_max': 0.2675413778\n",
+    "                },\n",
+    "                'feet': {\n",
+    "                    'estimated_diameter_min': 631.7424027221,\n",
+    "                    'estimated_diameter_max': 1412.6189567557\n",
+    "                }\n",
+    "            },\n",
+    "            'is_potentially_hazardous_asteroid': True,\n",
+    "            'close_approach_data': [{\n",
+    "                'close_approach_date': '2022-01-07',\n",
+    "                'close_approach_date_full': '2022-Jan-07 06:54',\n",
+    "                'epoch_date_close_approach': 1641538440000,\n",
+    "                'relative_velocity': {\n",
+    "                    'kilometers_per_second': '13.0121884925',\n",
+    "                    'kilometers_per_hour': '46843.8785729622',\n",
+    "                    'miles_per_hour': '29106.9644388498'\n",
+    "                },\n",
+    "                'miss_distance': {\n",
+    "                    'astronomical': '0.3880911625',\n",
+    "                    'lunar': '150.9674622125',\n",
+    "                    'kilometers': '58057611.275823875',\n",
+    "                    'miles': '36075326.811664475'\n",
+    "                },\n",
+    "                'orbiting_body': 'Earth'\n",
+    "            }],\n",
+    "            'is_sentry_object': False\n",
+    "        }]\n",
+    "    }\n",
+    "}\n",
+    "print(\"TEMP TYPE:\", type(temp))\n",
+    "# new_df = pd.concat([pd.DataFrame(pd.json_normalize(x)) for x in df['near_earth_objects']],ignore_index=True)\n",
+    "# print(new_df)\n",
+    "# characteristics_df = \n",
+    "# approach_df = \n"
    ]
   },
   {
