--- a/Individual_work/dsb_s190600.ipynb
+++ b/Individual_work/dsb_s190600.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "ox6BA2ofV_3p"
@@ -12,6 +13,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "7gNBBBNDV_3w"
@@ -30,6 +32,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "msQ8IFvWV_3x"
@@ -39,6 +42,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "-hLwyxsUV_3x"
@@ -50,6 +54,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "nTR20eiSV_3y"
@@ -78,6 +83,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "SI0DKpp3V_3z"
@@ -120,6 +126,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "O_VHaBeJV_30"
@@ -146,6 +153,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "6XjKV55tV_31"
@@ -189,6 +197,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "QMUK2TQiV_32"
@@ -219,6 +228,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "ETf0JhXDV_32"
@@ -319,6 +329,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "JIYL_rpIV_33"
@@ -346,10 +357,12 @@
    },
    "outputs": [],
    "source": [
-    "# TODO: write your code here\n"
+    "# TODO: \n",
+    "print(pump_df.head(3))\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "Ab0-qKj0V_33"
@@ -375,6 +388,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "InRQ69SmV_34"
@@ -416,6 +430,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "M-W9EAIqV_34"
@@ -451,6 +466,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "QUzqWROJV_35"
@@ -512,6 +528,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "ymyvkdS6V_36"
@@ -624,6 +641,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "4U61EDtTV_36"
@@ -846,6 +864,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "Swl_9wtdV_37"
@@ -946,6 +965,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "HqcwcbD1V_38"
@@ -1000,6 +1020,7 @@
    "source": []
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "kAC-DH-hV_39"
@@ -1048,6 +1069,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "H3W83prDV_39"
@@ -1070,6 +1092,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "L-fpNQYZV_3-"
@@ -1079,6 +1102,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "T5xSTa1-V_3-"
@@ -1127,6 +1151,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "orVd0jffV_3-"
@@ -1173,6 +1198,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "mmWz1z7AV_3_"
@@ -1230,6 +1256,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "Tm-WOGmxeVZ_"
@@ -1239,6 +1266,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "I3WkLGsOV_3_"
@@ -1316,6 +1344,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "B3dp1tBFV_4A"
@@ -1365,6 +1394,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "OZN7reANV_4A"
@@ -1410,6 +1440,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "6D35-mOsV_4B"
@@ -1432,6 +1463,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "Lh3AfTGYV_4B"
@@ -1499,6 +1531,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "aLkNmyE2V_4C"
@@ -1539,6 +1572,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "MLPpKe0lV_4C"
