--- a/4_HStemporal_spatial_data_analysis copy.ipynb
+++ b/4_HStemporal_spatial_data_analysis copy.ipynb
@@ -87,7 +87,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_yellow.head(10)"
+    "df_yellow.head(10)\n",
+    "import random\n",
+    "\n",
+    "# Select a random index from the DataFrame\n",
+    "random_index = random.randint(0, len(df_yellow) - 1)\n",
+    "\n",
+    "# Retrieve the random data point\n",
+    "random_data_point = df_yellow.iloc[random_index]\n",
+    "\n",
+    "# Display the random data point\n",
+    "print(random_data_point)\n"
    ]
   },
   {
@@ -96,7 +106,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_green.head(5)"
+    "df_green.head(5)\n",
+    "\n",
+    "dfchrist = df_green[df_green['lpep_pickup_datetime'].dt.strftime('%Y-%m-%d') == \"2022-12-25\"]\n",
+    "\n",
+    "print(dfchrist)"
    ]
   },
   {
@@ -348,7 +362,125 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Write your code"
+    "# Write your code\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# Analyze temporal patterns for df_yellow\n",
+    "# Extract relevant datetime information\n",
+    "df_yellow['tpep_pickup_datetime'] = pd.to_datetime(df_yellow['tpep_pickup_datetime'])\n",
+    "df_yellow['hour'] = df_yellow['tpep_pickup_datetime'].dt.hour\n",
+    "df_yellow['day_of_week'] = df_yellow['tpep_pickup_datetime'].dt.dayofweek\n",
+    "df_yellow['month'] = df_yellow['tpep_pickup_datetime'].dt.month\n",
+    "\n",
+    "\n",
+    "# Number of rides by time of day\n",
+    "rides_by_hour_yellow = df_yellow.groupby('hour').size()\n",
+    "\n",
+    "# Number of rides by day of the week\n",
+    "rides_by_day_yellow = df_yellow.groupby('day_of_week').size()\n",
+    "\n",
+    "# Number of rides by month\n",
+    "rides_by_month_yellow = df_yellow.groupby('month').size()\n",
+    "\n",
+    "# Plotting the temporal patterns for df_yellow\n",
+    "fig1, ax1 = plt.subplots(figsize=(10, 4))\n",
+    "rides_by_hour_yellow.plot(kind='bar', ax=ax1)\n",
+    "ax1.set_title('Number of Rides by Hour (df_yellow)')\n",
+    "ax1.set_xlabel('Hour of the Day')\n",
+    "ax1.set_ylabel('Number of Rides')\n",
+    "\n",
+    "fig2, ax2 = plt.subplots(figsize=(10, 4))\n",
+    "rides_by_day_yellow.plot(kind='bar', ax=ax2)\n",
+    "ax2.set_title('Number of Rides by Day of the Week (df_yellow)')\n",
+    "ax2.set_xlabel('Day of the Week')\n",
+    "ax2.set_ylabel('Number of Rides')\n",
+    "\n",
+    "fig3, ax3 = plt.subplots(figsize=(10, 4))\n",
+    "rides_by_month_yellow.plot(kind='bar', ax=ax3)\n",
+    "ax3.set_title('Number of Rides by Month (df_yellow)')\n",
+    "ax3.set_xlabel('Month')\n",
+    "ax3.set_ylabel('Number of Rides')\n",
+    "\n",
+    "# Analyze relationship with other variables (e.g., trip distance and fare)\n",
+    "# Scatter plot: Trip distance vs. Hour of pickup\n",
+    "plt.figure(figsize=(8, 6))\n",
+    "plt.scatter(df_yellow['hour'], df_yellow['trip_distance'])\n",
+    "plt.xlabel('Hour of Pickup')\n",
+    "plt.ylabel('Trip Distance')\n",
+    "plt.title('Trip Distance vs. Hour of Pickup (df_yellow)')\n",
+    "\n",
+    "# number of rides per day in the month of december \n",
+    "plt.figure\n",
+    "\n",
+    "# Show the plots\n",
+    "plt.subplots_adjust(hspace=0.5, wspace=1.3)\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now looking at green taxis "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# Analyze temporal patterns for df_green\n",
+    "# Extract relevant datetime information\n",
+    "df_green['lpep_pickup_datetime'] = pd.to_datetime(df_green['lpep_pickup_datetime'])\n",
+    "df_green['hour'] = df_green['lpep_pickup_datetime'].dt.hour\n",
+    "df_green['day_of_week'] = df_green['lpep_pickup_datetime'].dt.dayofweek\n",
+    "df_green['month'] = df_green['lpep_pickup_datetime'].dt.month\n",
+    "\n",
+    "# Number of rides by time of day\n",
+    "rides_by_hour_green = df_green.groupby('hour').size()\n",
+    "\n",
+    "# Number of rides by day of the week\n",
+    "rides_by_day_green = df_green.groupby('day_of_week').size()\n",
+    "\n",
+    "# Number of rides by month\n",
+    "rides_by_month_green = df_green.groupby('month').size()\n",
+    "\n",
+    "# Plotting the temporal patterns for df_yellow\n",
+    "fig1, ax1 = plt.subplots(figsize=(10, 4))\n",
+    "rides_by_hour_green.plot(kind='bar', ax=ax1)\n",
+    "ax1.set_title('Number of Rides by Hour (df_green)')\n",
+    "ax1.set_xlabel('Hour of the Day')\n",
+    "ax1.set_ylabel('Number of Rides')\n",
+    "\n",
+    "fig2, ax2 = plt.subplots(figsize=(10, 4))\n",
+    "rides_by_day_green.plot(kind='bar', ax=ax2)\n",
+    "ax2.set_title('Number of Rides by Day of the Week (df_green)')\n",
+    "ax2.set_xlabel('Day of the Week')\n",
+    "ax2.set_ylabel('Number of Rides')\n",
+    "\n",
+    "fig3, ax3 = plt.subplots(figsize=(10, 4))\n",
+    "rides_by_month_green.plot(kind='bar', ax=ax3)\n",
+    "ax3.set_title('Number of Rides by Month (df_green)')\n",
+    "ax3.set_xlabel('Month')\n",
+    "ax3.set_ylabel('Number of Rides')\n",
+    "\n",
+    "# Analyze relationship with other variables (e.g., trip distance and fare)\n",
+    "# Scatter plot: Trip distance vs. Hour of pickup\n",
+    "plt.figure(figsize=(8, 6))\n",
+    "plt.scatter(df_green['hour'], df_green['trip_distance'])\n",
+    "plt.xlabel('Hour of Pickup')\n",
+    "plt.ylabel('Trip Distance')\n",
+    "plt.title('Trip Distance vs. Hour of Pickup (df_green)')\n",
+    "\n",
+    "# Show the plots\n",
+    "plt.subplots_adjust(hspace=0.5, wspace=1.3)\n",
+    "plt.show()"
    ]
   },
   {
