--- a/4_NGtemporal_spatial_data_analysis.ipynb
+++ b/4_NGtemporal_spatial_data_analysis.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
     "zones_url = 'https://drive.google.com/file/d/12VgjWXkyEBsxzuKFxIkAevEbao85ei0T/view?usp=sharing'\n",
     "\n",
     "# Define the months and year you're interested in\n",
-    "months = ['01', '02', '03']\n",
+    "months = ['01']\n",
     "year = '2023'\n",
     "\n",
     "# Create empty lists to store the dataframes\n",
@@ -828,7 +828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -863,10 +863,10 @@
        "      <th>DOLocationID</th>\n",
        "      <th>payment_type</th>\n",
        "      <th>...</th>\n",
+       "      <th>improvement_surcharge</th>\n",
        "      <th>total_amount</th>\n",
        "      <th>congestion_surcharge</th>\n",
        "      <th>airport_fee</th>\n",
-       "      <th>Airport_fee</th>\n",
        "      <th>PU_zone</th>\n",
        "      <th>PU_lat</th>\n",
        "      <th>PU_lng</th>\n",
@@ -889,10 +889,10 @@
        "      <td>141</td>\n",
        "      <td>2</td>\n",
        "      <td>...</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>14.30</td>\n",
        "      <td>2.5</td>\n",
        "      <td>0.00</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>Midtown Center</td>\n",
        "      <td>40.758226</td>\n",
        "      <td>-73.977432</td>\n",
@@ -913,10 +913,10 @@
        "      <td>237</td>\n",
        "      <td>1</td>\n",
        "      <td>...</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>16.90</td>\n",
        "      <td>2.5</td>\n",
        "      <td>0.00</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>Central Park</td>\n",
        "      <td>40.782460</td>\n",
        "      <td>-73.965572</td>\n",
@@ -937,10 +937,10 @@
        "      <td>238</td>\n",
        "      <td>1</td>\n",
        "      <td>...</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>34.90</td>\n",
        "      <td>2.5</td>\n",
        "      <td>0.00</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>Clinton East</td>\n",
        "      <td>40.762237</td>\n",
        "      <td>-73.989857</td>\n",
@@ -961,10 +961,10 @@
        "      <td>7</td>\n",
        "      <td>1</td>\n",
        "      <td>...</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>20.85</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.25</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>LaGuardia Airport</td>\n",
        "      <td>40.774867</td>\n",
        "      <td>-73.872804</td>\n",
@@ -985,10 +985,10 @@
        "      <td>79</td>\n",
        "      <td>1</td>\n",
        "      <td>...</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>19.68</td>\n",
        "      <td>2.5</td>\n",
        "      <td>0.00</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>Gramercy</td>\n",
        "      <td>40.737348</td>\n",
        "      <td>-73.983310</td>\n",
@@ -998,7 +998,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 26 columns</p>\n",
+       "<p>5 rows × 25 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -1016,19 +1016,19 @@
        "3           1.90         1.0                  N           138             7   \n",
        "4           1.43         1.0                  N           107            79   \n",
        "\n",
-       "   payment_type  ...  total_amount  congestion_surcharge  airport_fee  \\\n",
-       "0             2  ...         14.30                   2.5         0.00   \n",
-       "1             1  ...         16.90                   2.5         0.00   \n",
-       "2             1  ...         34.90                   2.5         0.00   \n",
-       "3             1  ...         20.85                   0.0         1.25   \n",
-       "4             1  ...         19.68                   2.5         0.00   \n",
+       "   payment_type  ...  improvement_surcharge  total_amount  \\\n",
+       "0             2  ...                    1.0         14.30   \n",
+       "1             1  ...                    1.0         16.90   \n",
+       "2             1  ...                    1.0         34.90   \n",
+       "3             1  ...                    1.0         20.85   \n",
+       "4             1  ...                    1.0         19.68   \n",
        "\n",
-       "   Airport_fee            PU_zone     PU_lat     PU_lng  \\\n",
-       "0          NaN     Midtown Center  40.758226 -73.977432   \n",
-       "1          NaN       Central Park  40.782460 -73.965572   \n",
-       "2          NaN       Clinton East  40.762237 -73.989857   \n",
-       "3          NaN  LaGuardia Airport  40.774867 -73.872804   \n",
-       "4          NaN           Gramercy  40.737348 -73.983310   \n",
+       "   congestion_surcharge  airport_fee            PU_zone     PU_lat     PU_lng  \\\n",
+       "0                   2.5         0.00     Midtown Center  40.758226 -73.977432   \n",
+       "1                   2.5         0.00       Central Park  40.782460 -73.965572   \n",
+       "2                   2.5         0.00       Clinton East  40.762237 -73.989857   \n",
+       "3                   0.0         1.25  LaGuardia Airport  40.774867 -73.872804   \n",
+       "4                   2.5         0.00           Gramercy  40.737348 -73.983310   \n",
        "\n",
        "                 DO_zone     DO_lat     DO_lng  \n",
        "0        Lenox Hill West  40.766839 -73.959713  \n",
@@ -1037,10 +1037,10 @@
        "3                Astoria  40.761085 -73.921491  \n",
        "4           East Village  40.727944 -73.985214  \n",
        "\n",
-       "[5 rows x 26 columns]"
+       "[5 rows x 25 columns]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1544,10 +1544,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "User Guide: https://docs.kepler.gl/docs/keplergl-jupyter\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "15837fed74204e26adff39c01cbe33eb",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "KeplerGl(data={'Routes': {'index': [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import geopandas as gpd\n",
+    "from keplergl import KeplerGl\n",
+    "from shapely.geometry import LineString\n",
+    "\n",
+    "valid_coordinates = (~df_with_coord_yellow['PU_lat'].isna()) & (~df_with_coord_yellow['PU_lng'].isna()) & (~df_with_coord_yellow['DO_lat'].isna()) & (~df_with_coord_yellow['DO_lng'].isna())\n",
+    "df_filtered = df_with_coord_yellow[valid_coordinates]\n",
+    "\n",
+    "route_counts = df_filtered.groupby(['PU_lat', 'PU_lng', 'DO_lat', 'DO_lng']).size().reset_index(name='count')\n",
+    "\n",
+    "route_counts = df_filtered.groupby(['PU_lat', 'PU_lng', 'DO_lat', 'DO_lng']).size().reset_index(name='count')\n",
+    "\n",
+    "lines = []\n",
+    "for _, row in route_counts.iterrows():\n",
+    "    pickup_location = (row['PU_lng'], row['PU_lat'])\n",
+    "    dropoff_location = (row['DO_lng'], row['DO_lat'])\n",
+    "    line = LineString([pickup_location, dropoff_location])\n",
+    "    lines.append(line)\n",
+    "\n",
+    "gdf_routes = gpd.GeoDataFrame(geometry=lines, crs='EPSG:4326')\n",
+    "\n",
+    "map_1 = KeplerGl(height=600)\n",
+    "map_1.add_data(data=gdf_routes, name='Routes')\n",
+    "\n",
+    "map_1\n"
+   ]
   },
   {
    "attachments": {},
